--- a/tienich.css
+++ b/tienich.css
@@ -7,6 +7,9 @@
   a{
     text-decoration: none;
   }
+  body{
+    background-image: linear-gradient(to right, #ee9ca7, #ffdde1);
+  }
   .topnav {
       overflow: hidden;
       background-color: #333;
@@ -24,22 +27,22 @@
       background-color: #ddd;
       color: black;
     }
-    .menu{
-        height: 1000px;
-         background-color: #333;
-        width: 15%;
-       position: relative;
+    h1{
+      text-align: center;
+      text-decoration: underline;
+      padding : 30px 0 50px 0;
+      
     }
-    .menu > a{
-        background-color: white;
-          padding :15px;
-          border-radius: 5px;
-        color:#7762ed;
-        position: absolute;
-        top:15px;
-        left:35px;
+    .tkb_img{
+      border: 3px dashed #333;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      
+    }
+
     
-        
-        
-    }
+  
+   
+
     
